--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,7 @@
 server {
+  listen 10000;
+  server_name _;
+  root /usr/share/nginx/html;
 listen ${PORT};
   server_name _;
   root /usr/share/nginx/html;
